force-app/main/default/objects/leaseworks__Utilization_Report__c/leaseworks__Utilization_Report__c.object-meta.xml
<CustomObject>
    <description>Utilization Report for this aircraft
[MODULE: NA]
[LOAD: No]
[PREREQUISITES: NA]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Utilization</label>
    <nameField>
        <label>Utilization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Utilization</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>