force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/CAP_Is_Prior_Calendar_Year__c.field-meta.xml
<CustomField>
    <fullName>CAP_Is_Prior_Calendar_Year__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used to roll up utilization at the asset level to support sustainability reporting</description>
    <label>Is Prior Calendar Year</label>
    <type>Checkbox</type>
</CustomField>