force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Aircraft__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Aircraft__c</fullName>
    <label>Aircraft</label>
    <referenceTo>leaseworks__Aircraft__c</referenceTo>
    <relationshipName>Utilization_Reports1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>