force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Airframe_Flight_Hours_Month__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Airframe_Flight_Hours_Month__c</fullName>
    <label>Flight Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>