force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__ALL_URLI_CREATED__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__ALL_URLI_CREATED__c</fullName>
    <defaultValue>&quot;N&quot;</defaultValue>
    <description>Tells you whether all required ur list items have been created</description>
    <label>Z_Unused_2404 ALL_URLI_CREATED</label>
    <length>1</length>
    <type>Text</type>
</CustomField>