force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Assumed_Estimated__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Assumed_Estimated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>System Auto populates the value to true if the utilization type is &apos;Assumed/Estimated&apos;. This will be copied to invoice record for the insert and update case.</description>
    <inlineHelpText>Select if the utilization is on assumed or estimated basis. Assumed URs will not contribute towards Maintenance Reserves and Cycles/Hours on the aircraft and assemblies.</inlineHelpText>
    <label>_Assumed/Estimated?</label>
    <type>Checkbox</type>
</CustomField>