force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Base_MRR_Engine_2__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Base_MRR_Engine_2__c</fullName>
    <label>Z_Unused Base MRR Engine 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>