force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Collected__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Collected__c</fullName>
    <label>Z_Unused_2404 Collected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>