force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Comments__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Comments__c</fullName>
    <description>User free text comments</description>
    <inlineHelpText>User free text comments</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>