force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Credit_Memo__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Credit_Memo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Link to Credit Memo</label>
    <referenceTo>leaseworks__Credit_Memo__c</referenceTo>
    <relationshipLabel>Utilization</relationshipLabel>
    <relationshipName>Utilization</relationshipName>
    <type>Lookup</type>
</CustomField>