force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__CSN_At_Month_End__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__CSN_At_Month_End__c</fullName>
    <formula>leaseworks__Current_CSN__c   + leaseworks__Airframe_Cycles_Landing_During_Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSN At Period End</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>