force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__CSN_At_Period_Start_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__CSN_At_Period_Start_F__c</fullName>
    <description>Snapshot of CSN at the start of the period, before current CSN is added to the value</description>
    <formula>leaseworks__Current_CSN__c</formula>
    <inlineHelpText>Snapshot of CSN at the start of the period, before current CSN is added to the value</inlineHelpText>
    <label>CSN At Period Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>