force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Current_TSN__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Current_TSN__c</fullName>
    <description>Snapshot of TSN at the start of the period, before current TSN is added to the value</description>
    <inlineHelpText>Snapshot of TSN at the start of the period, before current TSN is added to the value</inlineHelpText>
    <label>_TSN At Period Start</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>