force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Cycles_During_Month_Engine3__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Cycles_During_Month_Engine3__c</fullName>
    <description>This being used in the create utilization quick action and its still in use, hence we cannot delete this field as part of this exercise. There is a support ticket to deprecate the create utilization button, we can add this in that ticket.</description>
    <label>FC (Engine 3)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>