force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Date_MR_Paid__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Date_MR_Paid__c</fullName>
    <description>Date when MR was paid</description>
    <inlineHelpText>Date when MR was paid</inlineHelpText>
    <label>Z_Unused_2203 Date MR Paid</label>
    <type>Date</type>
</CustomField>