force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Date_of_Submission__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Date_of_Submission__c</fullName>
    <description>Date when airline submitted UR to the lessor</description>
    <inlineHelpText>Date when airline submitted utilization report to the lessor</inlineHelpText>
    <label>Date of Submission</label>
    <type>Date</type>
</CustomField>