force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Deposit_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Deposit_Amount__c</fullName>
    <label>Z_Unused_2404 Deposit Amount</label>
    <summarizedField>leaseworks__Utilization_Report_List_Item__c.leaseworks__Deposit_Amount__c</summarizedField>
    <summaryForeignKey>leaseworks__Utilization_Report_List_Item__c.leaseworks__Utilization_Report__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>