force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Effective_MRR_Engine_1_LLP__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Effective_MRR_Engine_1_LLP__c</fullName>
    <defaultValue>0</defaultValue>
    <description>MR for engine 1 LLP (left engine for twin engine or inner left for four engine aircraft)</description>
    <inlineHelpText>MR for engine 1 LLP (left engine for twin engine or inner left for four engine aircraft)</inlineHelpText>
    <label>Z_Unused Effective MRR Engine 1 LLP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>