force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Effective_MRR_Engine_4_LLP__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Effective_MRR_Engine_4_LLP__c</fullName>
    <defaultValue>0</defaultValue>
    <description>MR for engine 4 LLP (outer right for four engine aircraft)</description>
    <inlineHelpText>MR for engine 4 LLP (outer right for four engine aircraft)</inlineHelpText>
    <label>Z_Unused Effective MRR Engine 4 LLP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>