force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Effective_MRR_LG_Left_Wing__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Effective_MRR_LG_Left_Wing__c</fullName>
    <label>Z_Unused Effective MRR LGLW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>