force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__End_Date_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__End_Date_F__c</fullName>
    <description>End Date of the Utilization</description>
    <formula>IF(  ISNULL(leaseworks__End_Date__c), leaseworks__Month_Ending__c, leaseworks__End_Date__c)</formula>
    <inlineHelpText>End Date of the Utilization</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>