force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Engineering_Modifications_or_Changes__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Engineering_Modifications_or_Changes__c</fullName>
    <description>Leaseworks internal notes about the utilization record or any changes that were made from the backend</description>
    <inlineHelpText>Leaseworks internal notes about the utilization record or any changes that were made from the backend</inlineHelpText>
    <label>_Internal Comments</label>
    <type>TextArea</type>
</CustomField>