force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Exclude_from_report__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Exclude_from_report__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if you want to exclude this Utilisation from report (example: low utilisation report). This is just information marker. Field is editable for Approved Utilisation</inlineHelpText>
    <label>Exclude from report</label>
    <type>Checkbox</type>
</CustomField>