force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__FH_String__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__FH_String__c</fullName>
    <description>Source Fortress. Accept FH in both decimal and hour:min format.</description>
    <inlineHelpText>Enter flight hours in decimal format or HH:MM format.</inlineHelpText>
    <label>Airframe FH</label>
    <length>14</length>
    <type>Text</type>
</CustomField>