force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Invoice__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Link to Invoice</label>
    <referenceTo>leaseworks__Invoice__c</referenceTo>
    <relationshipLabel>Utilization</relationshipLabel>
    <relationshipName>Utilization</relationshipName>
    <type>Lookup</type>
</CustomField>