force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Invoice_Date__c</fullName>
    <description>Date when invoice is generated by the lessor</description>
    <inlineHelpText>Date when invoice is generated by the lessor</inlineHelpText>
    <label>_Invoice Date</label>
    <type>Date</type>
</CustomField>