force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Liability_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Liability_Amount__c</fullName>
    <formula>leaseworks__Total_Maintenance_Reserve__c * leaseworks__Liability__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Liability Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>