force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Maint_Reserve_Heavy_Maint_3_Airframe__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Maint_Reserve_Heavy_Maint_3_Airframe__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Maintenance reserve for heavy maintenance 3 airframe</description>
    <inlineHelpText>Maintenance reserve for heavy maintenance 3 airframe</inlineHelpText>
    <label>Z_Unused Heavy Maint 3 Airframe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>