force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Maintenance_Reserve_Engine_1__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Maintenance_Reserve_Engine_1__c</fullName>
    <defaultValue>0</defaultValue>
    <description>MR for engine 1 (left engine for twin engine or inner left for four engine aircraft)</description>
    <inlineHelpText>MR for engine 1 (left engine for twin engine or inner left for four engine aircraft)</inlineHelpText>
    <label>Z_Unused Engine 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>