force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Maintenance_Reserve_Engine_2__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Maintenance_Reserve_Engine_2__c</fullName>
    <defaultValue>0</defaultValue>
    <description>MR for engine 2 (right for twin engine / inner right for four engine aircraft)</description>
    <inlineHelpText>MR for engine 2 (right for twin engine / inner right for four engine aircraft)</inlineHelpText>
    <label>Z_Unused Engine 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>