force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Month_Ending__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Month_Ending__c</fullName>
    <defaultValue>date(year(today()),month(today()),1)-1</defaultValue>
    <label>For Period Ending</label>
    <required>true</required>
    <type>Date</type>
</CustomField>