force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__MR_Paid__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MR_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Z_Unused_2203 MR Paid</label>
    <type>Checkbox</type>
</CustomField>