force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Orig_Airframe_Flight_Cycles_FC__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Orig_Airframe_Flight_Cycles_FC__c</fullName>
    <description>FC of Last Actual/TrueUpGross</description>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused_2404_Last Airframe(FC)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>