force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Payable__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Payable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Payable record link on utilization, if payable type = &quot;MR TrueUp&quot; on payable record</description>
    <label>Link to Payable</label>
    <referenceTo>leaseworks__Payable__c</referenceTo>
    <relationshipLabel>Utilization</relationshipLabel>
    <relationshipName>Utilization</relationshipName>
    <type>Lookup</type>
</CustomField>