force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Previous_Ratio_Table__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Previous_Ratio_Table__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Added the field to capture the previous ratio table associated with the lease</description>
    <label>Z_Unused_2404Original Ratio Table Engine</label>
    <referenceTo>leaseworks__Ratio_Table__c</referenceTo>
    <relationshipName>Monthly_Utilization</relationshipName>
    <type>Lookup</type>
</CustomField>