force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Prorated_FC__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Prorated_FC__c</fullName>
    <label>Z_Unused_2404 Prorated FC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>