force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Provision_MR_Total__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Provision_MR_Total__c</fullName>
    <label>Z_Unused_2404 Provision Total MR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>