force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Ratio_Table__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Ratio_Table__c</fullName>
    <description>Source : Fortress. On Aircraft &amp; Assembly UR Page, interpolation link should be added for easy look up</description>
    <formula>&apos;Deprecated&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused Current Ratio Table - Engine</label>
    <type>Text</type>
</CustomField>