force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Reconciliation_Schedule__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Reconciliation_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will currently only be populated on Utilization records created as part of Trueup Reconciliation schedules in order to track to which Reconciliation Schedule a Utilization record belongs.</description>
    <label>_Related Reconciliation Schedule</label>
    <referenceTo>leaseworks__Reconciliation_Schedule__c</referenceTo>
    <relationshipLabel>Utilization</relationshipLabel>
    <relationshipName>Utilization</relationshipName>
    <type>Lookup</type>
</CustomField>