force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__SRU_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__SRU_Error_Message__c</fullName>
    <description>Captured only if Status = Error</description>
    <inlineHelpText>Shows the reason for failure when utilization batch processing ends in error.</inlineHelpText>
    <label>Error Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>