force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__SRU_Status__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__SRU_Status__c</fullName>
    <description>System-controlled field reflecting async batch state.</description>
    <inlineHelpText>Indicates the current processing state of this utilization batch. Error status occurs only if processing fails.</inlineHelpText>
    <label>Processing State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
                <default>true</default>
                <label>Completed</label>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>