force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Start_Date__c</fullName>
    <description>Start Date of the Utilization.</description>
    <inlineHelpText>Start Date of the Utilization.</inlineHelpText>
    <label>_Start Date</label>
    <type>Date</type>
</CustomField>