force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Status__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Approved By Lessor</fullName>
                <color>#33CC00</color>
                <label>Approved By Lessor</label>
            </value>
            <value>
                <fullName>Submitted To Lessor</fullName>
                <color>#FFCC33</color>
                <label>Submitted To Lessor</label>
            </value>
            <value>
                <fullName>Rejected By Lessor</fullName>
                <color>#FF0000</color>
                <label>Rejected By Lessor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>