force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Sub_Type__c</fullName>
    <label>Z_Unused_2404 Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Base Reading Correction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>