force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Time_Remaining_To_Check__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Time_Remaining_To_Check__c</fullName>
    <label>Z_Unused_2404 Time Remaining To Check</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>