force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Total_Maintenance_Reserve__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Maintenance_Reserve__c</fullName>
    <description>Sum of maintenance reserve amount of all assemblies, under the related asset.</description>
    <formula>leaseworks__MR_Assembly__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of maintenance reserve amount of all assemblies, under the related asset.</inlineHelpText>
    <label>Total Maintenance Reserve</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>