force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Total_NMR_At_BoM__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_NMR_At_BoM__c</fullName>
    <description>Snapshot of total NMR at the time of creating the utilization (value is set upon approval)</description>
    <inlineHelpText>Snapshot of total NMR at the time of creating the utilization (value is set upon approval)</inlineHelpText>
    <label>Z_Unused_2012 Total NMR @ Period Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>