force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__True_Up__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__True_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mark this UR as a True up one. Do not fire the normal validations.</description>
    <inlineHelpText>Used when there is a one time adjustment to FH, FC or individual MR buckets</inlineHelpText>
    <label>_Manual Credits/Adjustments</label>
    <type>Checkbox</type>
</CustomField>