force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__TSN__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__TSN__c</fullName>
    <formula>leaseworks__Aircraft__r.leaseworks__TSN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused_2404 TSN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>