force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assumed/Estimated</fullName>
            </value>
            <value>
                <fullName>Actual</fullName>
                <default>true</default>
                <label>Actual</label>
            </value>
            <value>
                <fullName>Manual Credits/Adjustments</fullName>
            </value>
            <value>
                <fullName>True Up Gross</fullName>
            </value>
            <value>
                <fullName>Provision</fullName>
            </value>
            <value>
                <fullName>TSN/CSN Correction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>