force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Unknown_FH_FC__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Unknown_FH_FC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Airframe and Engine, If any one of field value for FH and FC or both fields are unknown then we are populating this field with true else false when creating or updating utilization from Utilization studio</description>
    <inlineHelpText>Indicates that user wants to skip reporting flight hours or flight cycles or both</inlineHelpText>
    <label>_Unknown FH/FC</label>
    <type>Checkbox</type>
</CustomField>