force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Utilization_Incomplete_Assemblies_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Utilization_Incomplete_Assemblies_F__c</fullName>
    <description>If this field is true then we are populating {TrueUp Complete Utilization} checkbox field with false else we are populating with true.</description>
    <formula>if( leaseworks__Utilization_Incomplete_Assemblies__c == 0,false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_Incomplete Utilization Checkbox</label>
    <type>Checkbox</type>
</CustomField>