force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Utilization_Staging__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Utilization_Staging__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This refers to the corresponding staging object.</description>
    <label>Utilization Staging</label>
    <referenceTo>leaseworks__Utilization_Report_Staging__c</referenceTo>
    <relationshipLabel>Utilization</relationshipLabel>
    <relationshipName>Utilization</relationshipName>
    <type>Lookup</type>
</CustomField>