force-app/main/default/objects/leaseworks__Utilization_Report__c/fields/leaseworks__Warning__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Warning__c</fullName>
    <description>This field is populated if the Utilization is part of the Reconciliation period. Text message provides a guidance to the user on how to make corrections</description>
    <inlineHelpText>This field is populated if the Utilization is part of the Reconciliation period. Text message provides a guidance to the user on how to make corrections</inlineHelpText>
    <label>Reconciliation Warning</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>